--- a/MyCv.html
+++ b/MyCv.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://cvws.icloud-content.com/B/AR-s4TbzwkxAt0YRRaOz8dwXBryCATfX5bvpBMhymYi2xw89heugeSpe/Nielsepic.jpg?o=AursnqBIW8v0hm4NX8OKlGAL8eLFvuyDhQdbde2g4u3o&v=1&x=3&a=CAogilPK2w6-z95nH5Peq0lsOih2Cz52vpYgEWDMlniy4g8SbxCut-e75i8Yzq6evOYvIgEAUgQXBryCWgSgeSpeaieEKG4SCrukwC0nzT-eKUOiYucWwwkmTWeXrV1ZCABdsYIYzOO91P5yJ_FfcZNZaIQjk0HtJ-E0YfYG6StiShvf2cVkDYd9n4WiwYvDnlfJaA&e=1642414446&fl=&r=3cb1d038-0d66-49ef-944c-39b49e796c06-1&k=6Ocwqf1iTDpG3oC46tq4Zw&ckc=com.apple.clouddocs&ckz=com.apple.CloudDocs&p=64&s=Ve4_Y7TpYDCxZPbPoVI5FMZJhAM&cd=i" style="width:100%" alt="Avatar">
+          <img src="images/Nielsepic.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Niel Botes</h2>
           </div>
