Took out language raitings

--- a/MyCv.html
+++ b/MyCv.html
@@ -32,7 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Vanderbjilpark, RSA</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>nielbotes2003@icloud.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>0817939573</p>
-          <hr>
+          <!-- <hr> -->
 
           <!-- <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
           <p>Adobe Photoshop</p>
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <br> -->
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+          <!-- <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
           <p>English</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
@@ -63,9 +63,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Afrikaans</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
-          </div>
+          </div> -->
          
-          <br>
+         
         </div>
       </div><br>
 
@@ -130,8 +130,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p>Find me on social media.</p>
   <a href="https://www.linkedin.com/in/niel-botes-abb71a22b/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   <a href="https://www.instagram.com/nie1bote2/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  <a href="https://wa.me/27817939573"><i class="fa fa-whatsapp w3-hover-opacity"></i></a>
   <a href="https://www.facebook.com/niel.botes.7"><i class="fa fa-facebook  w3-hover-opacity"></i></a>
   <a href="https://www.snapchat.com/add/nbotes84?share_id=OUQ5Nzg2&locale=en_ZA"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
+
   
 
  
